clusters/home-workers/ingress-nginx/gitea-hephy-pro/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gitea-hephy-pro
  namespace: ingress-nginx
spec:
  ports:
    - name: moo-ingress-http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: gitea-hephy-pro
  namespace: ingress-nginx
subsets:
- addresses:
  - ip: 10.17.12.201
  ports:
  - port: 80
    name: moo-ingress-http
  - port: 443
    name: moo-ingress
